--- a/buf.yaml
+++ b/buf.yaml
@@ -8,9 +8,10 @@ deps:
   - buf.build/cosmos/gogo-proto:5e5b9fdd01804356895f8f79a6f1ddc1
   - buf.build/googleapis/googleapis:cc916c31859748a68fd229a3c8d7a2e8
 lint:
-  use:
-    - STANDARD
   except:
     - SERVICE_SUFFIX
     - RPC_REQUEST_STANDARD_NAME
     - RPC_RESPONSE_STANDARD_NAME
+breaking:
+  except:
+    - FILE_SAME_GO_PACKAGE
