feat: disabling ledger + cgo
cgo is needed for ledger support but go removes non-go (c, c++) files.

temporarily removing build tag for ledger to disable cgo until a
solution is found.

--- a/simapp/Makefile
+++ b/simapp/Makefile
@@ -20,9 +20,9 @@ ldflags += -X github.com/cosmos/cosmos-sdk/version.Name=simapp \
 	-X github.com/cosmos/cosmos-sdk/version.BuildTags='ledger'
 ldflags := $(strip $(ldflags))
 
-BUILD_FLAGS := -ldflags '$(ldflags)' -tags 'ledger'
+BUILD_FLAGS := -ldflags '$(ldflags)'
 
 build:
-	@go build -mod=vendor $(BUILD_FLAGS) -o $(PWD)/build/ ./...
+	@CGO_ENABLED=false go build -mod=vendor $(BUILD_FLAGS) -o $(PWD)/build/ ./...
 
 .PHONY: build
